# fleetroll_mvp

./: .gitattributes  .gitignore  .mcp-cli.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  README.md  README.puppet_lifecycle.md  audit_all.sh  pyproject.toml  test_color_palette.py
.beads/: .gitignore  config.yaml  issues.jsonl
.beads/.br_history/: issues.20260127_035543.jsonl  issues.20260128_020920.jsonl  issues.20260128_082722.jsonl  issues.20260128_192106.jsonl
.cass/: playbook.yaml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml
configs/filters/: hung-moonshots.yaml  linux-moonshots.yaml  linux-netperf.yaml  linux-overrides.yaml  linux-talos.yaml  linux.yaml  mac.yaml  moonshots-hung-earlier.yaml  moonshots-hung.yaml  moonshots-online-but-not-working.yaml  moonshots-working.yaml  quarantined.yaml  unhealthy-stale.yaml  win.yaml
configs/host-lists/: 1804-and-2404.list  2404-h2.list  all.list  all_moonshots.list  canary-1804-and-2404-set-1.list
configs/host-lists/linux/: 1804-and-2404-batch1.list  1804-h1.list  1804.list  2404-h1.list  all.list  canary-1804-and-2404-set-2.list  canary-all.list  canary2-1804-and-2404-set-1.list
configs/host-lists/mac/: all.list  all_macminis.list  applicationservices-1-b-osx-1015.list  applicationservices-3-b-osx-1015.list  enterprise-1-b-osx-arm64.list  enterprise-3-b-osx-arm64.list  gecko-1-b-osx-1015-staging.list  gecko-1-b-osx-1015.list  (+19 more)
configs/overrides/: 012926-openvox-linux-phase-1.override  012926-puppet-metadata-file.override  020926-RELOPS-2179.override  021126-osx_run_puppet_generates_metadata.override  021826-windows.override  021826_linux_snmp.override  022526-2404-add-pactl.override  031326-run-puppet-tweaks.override  042226-linux-reboot-tweaking.override  05032026-1804-resolverd-wedging.override  052226-linux-moonshots-perf-sudoers.override  120825_auth_gh_calls.override  2404_ignore_secondary_interface.override  RELOPS-snmp-gw-pool-id-linux.override  pr-1227-linux-2404-install-openbox-bug-2031822.override
configs/rollouts/: rollout-013026-012926-openvox-linux-phase-1.md  rollout-013026-012926-puppet-metadata-file.md  rollout_form_feedback.md
data/: notes.jsonl
docker/test-sshd/: Dockerfile  entrypoint.sh
docs/: 20260427-beads-review.md  20260501-dev-plan.md  client-server-design-review.md  client-server-design.md  filter-picker-design.md  monitor-column-ordering.md  monitor-filter-sort.md  notes-feature.md  puppet-execution-mechanisms.md  puppet-state-tracking.md  rollout-health-verification.md  sqlite-migration-benchmarks.md  tart-fleet-integration.md  web-interface.md  windows-support.md
docs/project_presentation/: README.md  slides.md
examples/: quarantine_graphql.py  run-puppet-linux.sh  tc_client.py
examples/humanhash/: README.md  humanhash.py
fleetroll/: __init__.py  __main__.py  audit.py  cli.py  cli_types.py  config.py  constants.py  data_provider.py  db.py  exceptions.py  github.py  humanhash.py  notes.py  ssh.py  taskcluster.py  utils.py
fleetroll/commands/: __init__.py  _auto_audit.py  _monitor_impl.py  audit.py  data_freshness.py  gather_gh.py  gather_tc.py  maintain.py  monitor.py  note.py  override.py  rotate_logs.py  run_puppet.py  set.py  tc_fetch.py  unset.py  vault.py
host-lists/: 1804-h2.list  2404.list  all.list  all_macminis.list  canary-one-each-1804-and-2404.list
overrides/: .gitignore
references/: README.md  run-puppet-linux.sh  run-puppet-linux.sh.erb  run-puppet-macos.sh  test-state-writing.sh  verify-state-file.sh  write_puppet_state.sh
scripts/: generate-web-types.sh
specs/: FleetRoll_Product_Spec_v5.md  README_FleetRoll_MVP.md
tests/: __init__.py  conftest.py  test_audit.py  test_categorical_colors.py  test_cli.py  test_commands_audit.py  test_commands_auto_audit.py  test_commands_data_freshness.py  test_commands_gather.py  test_commands_gather_host.py  test_commands_gather_tc.py  test_commands_note.py  test_commands_override.py  test_commands_run_puppet.py  test_commands_set.py  test_commands_tc_fetch.py  test_commands_unset.py  test_commands_vault.py  test_commands_vault_show.py  test_config.py  test_db.py  test_filter_history.py  test_filters_popup.py  test_gather_host.py  test_github.py  test_main.py  test_monitor_cache.py  test_monitor_data.py  test_monitor_query.py  test_monitor_render.py  test_named_filters.py  test_notes.py  test_release_notes.py  test_retry.py  test_ssh.py  test_ssh_execution.py  test_taskcluster.py  test_utils.py  tmux_helpers.py
tests/integration/: __init__.py  conftest.py  test_gather_host_e2e.py  test_host_audit_e2e.py  test_web_filters_endpoint.py
tests/tui/: conftest.py  test_filters_popup.py  test_monitor_tui.py
tests/web/: conftest.py  test_api_health.py  test_api_hello.py  test_api_hosts.py  test_static_assets.py
tools/: __init__.py  bench_sqlite_vs_jsonl.py  create_override.sh  create_rollout.py  gather-all.sh  gather-generic.sh  gather-macminis.sh  gather-moonshots.sh  generate_all_host_lists.py  generate_host_lists.sh  generate_mac_host_list.py  generate_windows_host_list.py  list_bad_linux_hosts.sh  list_hosts_by_override_branch.sh  monitor-all.sh  monitor-macs.sh  monitor-moonshots.sh  natural_sort.py  start_gather_tmux.py  test_extended_colors.py
tools/dev/: create-release-notes.sh  find_version_rev_commits.sh  ghostty_curses_bug_demo.py  png_shrink.sh  release_notes.py  test_color_palette.py  verify_imports.py
web/: .eslintrc.cjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
web/e2e/: hello.spec.ts
web/src/: App.tsx  ErrorBoundary.tsx  NotFound.tsx  index.css  main.tsx
(+43 files in other folders)
