[project]
name = "fleetroll"
version = "0.1.0"
description = "Fleet management tool for auditing and managing override files via SSH"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.0", "requests>=2.28", "taskcluster>=67.0.0"]


[dependency-groups]
test = [
    "pytest>=7.0",
    "pytest-coverage>=0.0",
    "pytest-mock>=3.10",
    "pytest-watcher>=0.6.3",
]

[project.scripts]
fleetroll = "fleetroll:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = ["allow_validation: allow override syntax validation in tests"]

[tool.pytest-watcher]
now = true
clear = true
runner = "pytest"
# '--cov',
runner_args = ['--quiet']
delay = 0.2
notify_on_failure = true
#patterns = ["*.py"]
#ignore_patterns = []
