[project]
name = "fleetroll"
version = "0.2.2"
description = "Fleet management tool for auditing and managing override files via SSH"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.0", "pyyaml>=6.0", "requests>=2.28", "taskcluster>=67.0.0"]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "audit"},
]
lint = ["ruff", "ty"]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock>=3.10",
    "pytest-watcher>=0.6.3",
]
audit = ["pip-audit"]

[project.scripts]
fleetroll = "fleetroll:main"
verify-imports = "tools.dev.verify_imports:main"
natural-sort = "tools.natural_sort:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    # TODO: do these in `make coverage`, it blows out ptw output if enabled here
    #"--cov=fleetroll",
    #"--cov-report=term-missing",
    #"--cov-report=html",
    "--cov-fail-under=45",
]
markers = ["allow_validation: allow override syntax validation in tests"]

[tool.pytest-watcher]
now = true
clear = true
runner = "pytest"
runner_args = ['--quiet']
delay = 0.2
notify_on_failure = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["fleetroll"]
exclude = ["examples"]

# Allow lines up to 120 chars (some flexibility for readability)
[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # pydocstyle - skip for now
    "COM812",   # trailing comma - conflicts with formatter
    "ISC001",   # implicit string concatenation - conflicts with formatter
    "ANN",      # type annotations - add these gradually
    "FIX002",   # line contains TODO
    "TD002",    # missing author in TODO
    "TD003",    # missing issue link in TODO
    "TC003",    # move imports into TYPE_CHECKING block - overly strict
    "TRY003",   # long exception messages - fine for CLI tools
    "TRY300",   # else block suggestions - stylistic preference
    "EM101",    # exception string literals - fine for CLI tools
    "EM102",    # exception f-string literals - fine for CLI tools
    "FBT001",   # boolean positional args - common in CLI tools
    "FBT002",   # boolean default args - common in CLI tools
    "T201",     # print statements - needed for CLI output
    "PLW2901",  # loop variable overwrite - common pattern
    "TID252",   # relative imports - fine
    "PLR2004",  # magic values - too noisy for practical code
    "SIM102",   # nested if simplification - readability preference
    "SIM108",   # ternary operator suggestions - readability preference
    "RET504",   # unnecessary assignment before return - sometimes clearer
    "BLE001",   # catching Exception - sometimes necessary
    "TC002",    # move imports into TYPE_CHECKING block - overly strict
    "ARG005",   # unused lambda args - common pattern
    "ERA001",   # commented code - sometimes legitimate
    "B904",     # raise from err - not always necessary
    "B905",     # zip strict parameter - often not needed
    "TRY301",   # abstract raise - overly strict
    "PTH",      # pathlib rules - gradually migrate
    "RUF005",   # list concatenation suggestions - readability preference
    "B007",     # unused loop control variable - sometimes clearer
    "PLC0415",  # import in function - sometimes necessary (curses)
    "UP022",    # subprocess capture_output - either way is fine
    "S603",     # subprocess untrusted input - too many false positives
    "RUF059",   # unused unpacked variables - common pattern
    "FBT003",   # boolean positional values - common in CLI tools
]

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 65
max-statements = 250

[tool.ruff.lint.mccabe]
max-complexity = 55

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert allowed in tests
    "PLR2004",  # magic values allowed in tests
    "S105",     # hardcoded passwords in tests are fixtures
    "S106",     # hardcoded passwords in tests are fixtures
    "PLC0415",  # imports not at top - sometimes needed in tests
    "ARG001",   # unused function args - pytest fixtures
    "ARG002",   # unused method args - pytest fixtures
    "RUF059",   # unused unpacked vars - common in tests
]
"fleetroll/db.py" = [
    "S608",     # SQL injection false positives - placeholders are safely constructed
]

[tool.ty.terminal]
error-on-warning = false

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"
